--- a/negado.html
+++ b/negado.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="container">
 		<div class="center-block d-flex justify-content-center">
-			<div class="badge badge-danger text-wrap justify-content-center" style="width: 30rem;margin-top: 20%">
+			<div class="badge badge-primary text-wrap justify-content-center" style="width: 30rem;margin-top: 20%">
 				<a href="/" style="color: #fff;">Regrese a la p&aacute;gina principal, intente ingresar nuevamente.</a>
 			</div>
 		</div>
